--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           <h3 class="h3">
               This page is hosted on <a href="https://timothyylim.github.io/bitgo-bcash-recovery-tool/">github.io</a>
             </h3>
+           <h3 class="h3">
+              <a href="https://github.com/timothyylim/bitgo-bcash-recovery-tool">Source</a>
+            </h3>
           <span id="current-mode"></span>
           <a id="mode-switch" onClick="setTimeout(renderForm); return true"></a>
         </div>
